brick with text

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,15 @@
                 <img src="../img/food-q-c-300-300-1.jpg">
             </div>
             <div class="text border-right">
-                <div class="kocka-right"></div>
+                <div class="content">
+<p>asdf asd asdf as</p>
+                <h1>asd fasdf asdf </h1>
+                <h2>asd fasdf asdf </h2>
+                <h2>asd fasdf asdf </h2>
+                <h2>asd fasdf asdf </h2>
+                sdf asdfasdfasdfj absdfjhaskd;ljfhak;jsdhfk;jasdh fkjasdhfkjasdhfkj as askd kasjudfh kaj;shf ipausdfh piausdfh k;ausdfh kausdhf i;kasjdhf k;asjdfh ;kasjdfh ka;lsjdfh ka;sjdfh ;kasjdfh ;kjsdhf k;jsdhf k;asjdfh ;kasjdhf ;kajsdfh ;kasjdfhg ;asudjhf ;kasjdfh a;ksjdfh a;kisdjfh a;psujdfhf ;kajsdfhg ;akujdsfghv [iujrh piqujrgkhf ;akjdgfhv ;kjerdhf ;iku    wejFH ;KIUWJFH ;AQEFKDJGBV ;KAJSDFBGV ;KAJEFDSBGV ;PAKJDFSB GLKAJFEDB GPA;FKDJG P;KAFJGH L;AKSJDFGB AKP;SDFJBG KP;QAFSGDHB LKASDJFGB ]
+                    </div>
+                <div class="kocka kocka-right"></div>
             </div>
             <div class="image">
                 <img src="../img/food-q-c-300-300-4.jpg">
@@ -28,13 +36,13 @@
         </div>
         <div class="countainer">
             <div class="text border-top">
-                <div class="kocka-top"></div>
+                <div class=" kocka kocka-top"></div>
             </div>
             <div class="image border-top-grey">
                 <img src="../img/food-q-c-300-300-8.jpg">
             </div>
             <div class="text border-left">
-                <div class="kocka-left"></div>
+                <div class=" kocka kocka-left"></div>
             </div>
         </div>
     </div>
