BEM principe SASS

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,11 +9,13 @@
     <title>Restorant</title>
 
     <link href="../css/main.css" rel="stylesheet" />
+    <link href="../sass/square.css" rel="stylesheet" />
     <link href="../css/reset.css" rel="stylesheet" />
 
 </head>
 
 <body>
+<!--
     <div class="menu">
         <div class="countainer">
             <div class="image">
@@ -46,6 +48,35 @@
             </div>
         </div>
     </div>
+-->
+
+<!--    BEM    -->
+    <div class="container">
+        <div class="container__box container__box--red">
+            tekst
+        </div>
+        <div class="container__box container__box--green">
+        tekst
+            <div class="container__box--square"></div>
+        </div>
+        <div class="container__box">
+        asfasdf
+        </div>
+        <div class="container__box">
+        tekst
+            <div class="container__box--square"></div>
+        </div>
+        <div class="container__box">
+        safasdfdsafasdf
+        </div>
+        <div class="container__box">
+        tekst
+            <div class="container__box--square"></div>
+        </div>
+
+    </div>
+
+
 </body>
 
 <script src="../js/main.js"></script>
