Eve go ova so kockite, malku me zezase gulp sass ama se snajdov, tekstot ne e najdobar, me mrzese da go pravam.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,21 +15,13 @@
 </head>
 
 <body>
-<!--
+    <!--
     <div class="menu">
         <div class="countainer">
             <div class="image">
                 <img src="../img/food-q-c-300-300-1.jpg">
             </div>
             <div class="text border-right">
-                <div class="content">
-<p>asdf asd asdf as</p>
-                <h1>asd fasdf asdf </h1>
-                <h2>asd fasdf asdf </h2>
-                <h2>asd fasdf asdf </h2>
-                <h2>asd fasdf asdf </h2>
-                sdf asdfasdfasdfj absdfjhaskd;ljfhak;jsdhfk;jasdh fkjasdhfkjasdhfkj as askd kasjudfh kaj;shf ipausdfh piausdfh k;ausdfh kausdhf i;kasjdhf k;asjdfh ;kasjdfh ka;lsjdfh ka;sjdfh ;kasjdfh ;kjsdhf k;jsdhf k;asjdfh ;kasjdhf ;kajsdfh ;kasjdfhg ;asudjhf ;kasjdfh a;ksjdfh a;kisdjfh a;psujdfhf ;kajsdfhg ;akujdsfghv [iujrh piqujrgkhf ;akjdgfhv ;kjerdhf ;iku    wejFH ;KIUWJFH ;AQEFKDJGBV ;KAJSDFBGV ;KAJEFDSBGV ;PAKJDFSB GLKAJFEDB GPA;FKDJG P;KAFJGH L;AKSJDFGB AKP;SDFJBG KP;QAFSGDHB LKASDJFGB ]
-                    </div>
                 <div class="kocka kocka-right"></div>
             </div>
             <div class="image">
@@ -50,30 +42,32 @@
     </div>
 -->
 
-<!--    BEM    -->
+    <!--    BEM    -->
     <div class="container">
-        <div class="container__box container__box--red">
-            tekst
+        <div class="container__box">
+            <img src="../img/food-q-c-300-300-1.jpg">
         </div>
-        <div class="container__box container__box--green">
-        tekst
-            <div class="container__box--square"></div>
+        <div class="container__box border_right">
+            <div class="header">HERE YOU CAN FIND BEAUTY DESERTS!</div>
+            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa.</div>
+            <div class="container__box--square right"></div>
         </div>
         <div class="container__box">
-        asfasdf
+            <img src="../img/food-q-c-300-300-4.jpg">
+        </div>
+        <div class="container__box border_top">
+            <div class="header">HERE YOU CAN FIND BEAUTY DESERTS!</div>
+            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa.</div>
+            <div class="container__box--square top"></div>
         </div>
         <div class="container__box">
-        tekst
-            <div class="container__box--square"></div>
+            <img src="../img/food-q-c-300-300-8.jpg">
         </div>
-        <div class="container__box">
-        safasdfdsafasdf
+        <div class="container__box border_left">
+            <div class="header">HERE YOU CAN FIND BEAUTY DESERTS!</div>
+            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa.</div>
+            <div class="container__box--square left"></div>
         </div>
-        <div class="container__box">
-        tekst
-            <div class="container__box--square"></div>
-        </div>
-
     </div>
 
 
