--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,13 +42,29 @@
     </div>
 -->
 
+    <!--    About    -->
+    <div class="about">
+        <div class="header">
+            <div class="header__title"></div>
+        </div>
+        <div class="main">
+            <div class="main__containerImg">
+            </div>
+            <div class="main__containerText">
+            </div>
+        </div>
+        <div class="footer">
+
+        </div>
+    </div>
+
     <!--    BEM    -->
     <div class="container">
         <div class="container__box">
             <img src="../img/food-q-c-300-300-1.jpg">
         </div>
         <div class="container__box border_right">
-            <div class="header">HERE YOU CAN FIND BEAUTY DESERTS!</div>
+            <div class="title">HERE YOU CAN FIND BEAUTY DESERTS!</div>
             <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa.</div>
             <div class="container__box--square right"></div>
         </div>
@@ -56,7 +72,7 @@
             <img src="../img/food-q-c-300-300-4.jpg">
         </div>
         <div class="container__box border_top">
-            <div class="header">HERE YOU CAN FIND BEAUTY DESERTS!</div>
+            <div class="title">HERE YOU CAN FIND BEAUTY DESERTS!</div>
             <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa.</div>
             <div class="container__box--square top"></div>
         </div>
@@ -64,7 +80,7 @@
             <img src="../img/food-q-c-300-300-8.jpg">
         </div>
         <div class="container__box border_left">
-            <div class="header">HERE YOU CAN FIND BEAUTY DESERTS!</div>
+            <div class="title">HERE YOU CAN FIND BEAUTY DESERTS!</div>
             <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa.</div>
             <div class="container__box--square left"></div>
         </div>
