--- a/src/html/index.html
+++ b/src/html/index.html
@@ -45,10 +45,14 @@
     <!--    About    -->
     <div class="about">
         <div class="header">
-            <div class="header__title"></div>
+            <div class="header__title">
+                <h1 style="color: red; font-size: 30px; font-family: monospace; letter-spacing: 3px;">ABOUT</h1><br>
+                <h3 style="color: grey; font-size: 17px; font-family: sans-serif; letter-spacing: 1px;" >SEE WHO WE ARE AND WHAT WE OFFER!</h3>
+            </div>
         </div>
         <div class="main">
             <div class="main__containerImg">
+                <img src="../img/White-Oven-SO-Sofitel-Hua-Hin-1-S-550x400.jpg">
             </div>
             <div class="main__containerText">
             </div>
