zavrseno e about, samo uste nad buttonot crtata neznam kako da ja napravam.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,7 @@
 
 <head>
 
+    <script src="https://use.fontawesome.com/7c170cd744.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 
     <title>Restorant</title>
@@ -47,7 +48,7 @@
         <div class="header">
             <div class="header__title">
                 <h1 style="color: red; font-size: 30px; font-family: monospace; letter-spacing: 3px;">ABOUT</h1><br>
-                <h3 style="color: grey; font-size: 17px; font-family: sans-serif; letter-spacing: 1px;" >SEE WHO WE ARE AND WHAT WE OFFER!</h3>
+                <h3 style="color: grey; font-size: 17px; font-family: sans-serif; letter-spacing: 1px;">SEE WHO WE ARE AND WHAT WE OFFER!</h3>
             </div>
         </div>
         <div class="main">
@@ -55,6 +56,20 @@
                 <img src="../img/White-Oven-SO-Sofitel-Hua-Hin-1-S-550x400.jpg">
             </div>
             <div class="main__containerText">
+                <div class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at est cursus, iaculis ex ac, suscipit massa. Etiam sit amet efficitur orci. Etiam sodales non enim sit amet venenatis. Nulla eget eleifend orci, in volutpat ante. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis eget elit in risus sagittis euismod. Donec suscipit dui non vestibulum.</div>
+                <div class="button">
+                    <button class="readMore">Read More</button>
+                </div>
+                <div class="icon">
+                    <i class="fa fa-facebook-square fa-lg"></i>
+                    <i class="fa fa-twitter-square fa-lg"></i>
+                    <i class="fa fa-glide   fa-lg"></i>
+                    <i class="fa fa-google-plus-square fa-lg"></i>
+                    <i class="fa fa-tumblr-square fa-lg"></i>
+                    <i class="fa fa-trello fa-lg"></i>
+                    <i class="fa fa-git-square fa-lg"></i>
+                    <i class="fa fa-linkedin-square fa-lg"></i>
+                </div>
             </div>
         </div>
         <div class="footer">
