--- a/src/html/carousel.html
+++ b/src/html/carousel.html
@@ -11,21 +11,16 @@
 <body>
     <div class="gallery">
         <div class="gallery__button-container gallery__button-container--left">
-            <div class="gallery__button-container__button" id="back"></div>
+            <div class="gallery__button-container__button" id="back">&lt;</div>
         </div>
         <div class="gallery__image">
             <img class="gallery__image-item" src="../img/gallery_image_1.jpg">
             <img class="gallery__image-item" src="../img/gallery_image_2.jpg">
             <img class="gallery__image-item" src="../img/gallery_image_3.jpg">
-            <img class="gallery__image-item" src="http://via.placeholder.com/350x150">
-            <img class="gallery__image-item" src="http://via.placeholder.com/200x440">
-            <img class="gallery__image-item" src="http://via.placeholder.com/100x555">
-
             <img class="gallery__image-item" src="../img/gallery_image_4.jpg">
-
         </div>
         <div class="gallery__button-container gallery__button-container--right">
-            <div class="gallery__button-container__button" id="next"></div>
+            <div class="gallery__button-container__button" id="next">&gt;</div>
         </div>
         <div class="gallery__indicators"></div>
     </div>
