ke go dosredam ostanatoto

--- a/src/html/carousel.html
+++ b/src/html/carousel.html
@@ -22,7 +22,12 @@
         <div class="gallery__button-container gallery__button-container--right">
             <div class="gallery__button-container__button" id="next">&gt;</div>
         </div>
-        <div class="gallery__indicators"></div>
+        <div class="gallery__indicators">
+            <div class="gallery__indicators__button"></div>
+            <div class="gallery__indicators__button"></div>
+            <div class="gallery__indicators__button"></div>
+            <div class="gallery__indicators__button"></div>
+        </div>
     </div>
 
 </body>
