go napraviv toa so kockite sledno ke bide bricks

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -71,6 +71,10 @@
 
     <!--    Kocki    -->
     <div class="menu">
+        <div class="menuText">
+            <h1 style="color: red; font-size: 30px; font-family: monospace; letter-spacing: 3px;">MENU</h1><br>
+            <h3 style="color: grey; font-size: 17px; font-family: sans-serif; letter-spacing: 1px;">CHECK OUT OUR MENU AND SELECT SOMETHING FOR EVERYONE!</h3>
+        </div>
         <div class="container">
             <div class="container__box">
                 <img src="../img/1.jpg">
@@ -95,6 +99,29 @@
                 <div class="title">HERE YOU CAN FIND BEAUTY DESERTS!</div>
                 <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa.</div>
                 <div class="container__box--square left"></div>
+            </div>
+        </div>
+        <div class="menuRight">
+            <div class="menuRight__top">
+                <br>
+                <h1 style="font-size: 35px; font-family: monospace; letter-spacing: 1px;">OTHER</h1>
+                <h1 style="font-size: 35px; font-family: monospace; letter-spacing: 1px;">ITEMS FOR YOU</h1>
+            </div>
+            <div class="menuRight__text"><br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi.
+            </div>
+            <div class="menuRight__button">
+                <button class="buttonKocki">MEET OUR WORKS</button>
+            </div>
+            <div class="menuRight__bottom">
+                <br>
+                <h1 style="font-size: 35px; font-family: monospace; letter-spacing: 1px;">CATEGORIES</h1>
+            </div>
+            <div class="menuRight__list">
+                <br><br><h1 style="font-size: 20px; letter-spacing: 1px; border-bottom: white solid 1px;">DESERTS</h1>
+                <br><br><h1 style="font-size: 20px; letter-spacing: 1px; border-bottom: white solid 1px;">SALADS</h1>
+                <br><br><h1 style="font-size: 20px; letter-spacing: 1px; border-bottom: white solid 1px;"> FRUIT SHAKES</h1>
+                <br><br><h1 style="font-size: 20px; letter-spacing: 1px; border-bottom: white solid 1px;">FISH</h1>
             </div>
         </div>
     </div>
