--- a/src/html/index.html
+++ b/src/html/index.html
@@ -107,8 +107,7 @@
                 <h1 style="font-size: 35px; font-family: monospace; letter-spacing: 1px;">OTHER</h1>
                 <h1 style="font-size: 35px; font-family: monospace; letter-spacing: 1px;">ITEMS FOR YOU</h1>
             </div>
-            <div class="menuRight__text"><br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi.
+            <div class="menuRight__text"><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi.
             </div>
             <div class="menuRight__button">
                 <button class="buttonKocki">MEET OUR WORKS</button>
@@ -118,52 +117,65 @@
                 <h1 style="font-size: 35px; font-family: monospace; letter-spacing: 1px;">CATEGORIES</h1>
             </div>
             <div class="menuRight__list">
-                <br><br><h1 style="font-size: 20px; letter-spacing: 1px; border-bottom: white solid 1px;">DESERTS</h1>
-                <br><br><h1 style="font-size: 20px; letter-spacing: 1px; border-bottom: white solid 1px;">SALADS</h1>
-                <br><br><h1 style="font-size: 20px; letter-spacing: 1px; border-bottom: white solid 1px;"> FRUIT SHAKES</h1>
-                <br><br><h1 style="font-size: 20px; letter-spacing: 1px; border-bottom: white solid 1px;">FISH</h1>
+                <br><br>
+                <h1 style="font-size: 18px; letter-spacing: 1px; border-bottom: white solid 1px;">DESERTS</h1>
+                <br><br>
+                <h1 style="font-size: 18px; letter-spacing: 1px; border-bottom: white solid 1px;">SALADS</h1>
+                <br><br>
+                <h1 style="font-size: 18px; letter-spacing: 1px; border-bottom: white solid 1px;"> FRUIT SHAKES</h1>
+                <br><br>
+                <h1 style="font-size: 18px; letter-spacing: 1px; border-bottom: white solid 1px;">FISH</h1>
             </div>
         </div>
     </div>
     <div class="clearfix"></div>
 
     <!--    Brick    -->
-    <div class="brickContainer">
-        <div class="grid-item" style="height:100px;" data-packed>
-            <img src="http://lorempixel.com/150/100/">
+    <div class="brick">
+        <div class="brick__title">
+            <h1 style="color: red; font-size: 30px; font-family: monospace; letter-spacing: 3px;">GALLERY</h1><br>
+            <h3 style="color: grey; font-size: 17px; font-family: sans-serif; letter-spacing: 1px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         </div>
-        <div class="grid-item" style="height:150px;" data-packed>
-            <img src="http://lorempixel.com/150/150/">
-        </div>
-        <div class="grid-item" style="height:200px;" data-packed>
-            <img src="http://lorempixel.com/150/200/">
-        </div>
-        <div class="grid-item" style="height:200;" data-packed>
-            <img src="http://lorempixel.com/150/200/">
-        </div>
-        <div class="grid-item" style="height:100px;" data-packed>
-            <img src="http://lorempixel.com/150/100/">
-        </div>
-        <div class="grid-item" style="height:150px;" data-packed>
-            <img src="http://lorempixel.com/150/150/">
-        </div>
-        <div class="grid-item" style="height:100px;" data-packed>
-            <img src="http://lorempixel.com/150/100/">
-        </div>
-        <div class="grid-item" style="height:200px;" data-packed>
-            <img src="http://lorempixel.com/150/200/">
-        </div>
-        <div class="grid-item" style="height:150px;" data-packed>
-            <img src="http://lorempixel.com/150/150/">
-        </div>
-        <div class="grid-item" style="height:200px;" data-packed>
-            <img src="http://lorempixel.com/150/200/">
-        </div>
-        <div class="grid-item" style="height:100px;" data-packed>
-            <img src="http://lorempixel.com/150/100/">
-        </div>
-        <div class="grid-item" style="height:150px;" data-packed>
-            <img src="http://lorempixel.com/150/150/">
+        <div class="brickContainer">
+            <!--    1    -->
+            <div class="grid-item" style="height:300px;" data-packed>
+                <img src="../img/B3001.jpg">
+            </div>
+            <div class="grid-item" style="height:200px;" data-packed>
+                <img src="../img/B2002.jpg">
+            </div>
+            <div class="grid-item" style="height:150px;" data-packed>
+                <img src="../img/B1501.jpg">
+            </div>
+            <div class="grid-item" style="height:200px;" data-packed>
+                <img src="../img/B2003.jpg">
+            </div>
+            <!--    2    -->
+            <div class="grid-item" style="height:150px;" data-packed>
+                <img src="../img/B1502.jpg">
+            </div>
+            <div class="grid-item" style="height:300px;" data-packed>
+                <img src="../img/B3002.jpg">
+            </div>
+            <div class="grid-item" style="height:200px;" data-packed>
+                <img src="../img/B2004.jpg">
+            </div>
+            <div class="grid-item" style="height:300px;" data-packed>
+                <img src="../img/B3004.jpg">
+            </div>
+            <!--    3    -->
+            <div class="grid-item" style="height:200px;" data-packed>
+                <img src="../img/B2001.jpg">
+            </div>
+            <div class="grid-item" style="height:150px;" data-packed>
+                <img src="../img/B1504.jpg">
+            </div>
+            <div class="grid-item" style="height:300px;" data-packed>
+                <img src="../img/B3003.jpg">
+            </div>
+            <div class="grid-item" style="height:150px;" data-packed>
+                <img src="../img/B1503.jpg">
+            </div>
         </div>
     </div>
     <div class="clearfix"></div>
