--- a/src/html/index.html
+++ b/src/html/index.html
@@ -179,6 +179,43 @@
         </div>
     </div>
     <div class="clearfix"></div>
+
+    <!--    Reservation    -->
+    <div class="reservation">
+    <div class="reservation__title">
+            <h1 style="color: red; font-size: 30px; font-family: monospace; letter-spacing: 3px;">MAKE A RESERVATION</h1><br>
+            <h3 style="color: grey; font-size: 17px; font-family: sans-serif; letter-spacing: 1px;">Lorem ipsum dolor sit amet, consectetur adipiscing.</h3>
+        </div>
+        <div class="reservation__container">
+            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Your Name</h1></div>
+            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Your Mail</h1></div>
+            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Guests (Amount)</h1></div>
+            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Date</h1></div>
+            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Time</h1></div>
+            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Phone</h1></div>
+            <div class="reservation__bigContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Special Requests</h1></div>
+            <div class="reservation__button">
+            <button class="reservationB">CONFIRM</button>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 <script src="https://use.fontawesome.com/7c170cd744.js"></script>
