--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,8 @@
     <link href="../sass/tiles.css" rel="stylesheet" />
     <link href="../sass/carousel.css" rel="stylesheet" />
 
+    <link href="https://fonts.googleapis.com/css?family=Karma|Krona+One|Lato|Mina|Montserrat|Open+Sans|Oswald|Roboto|Roboto+Condensed|Saira+Condensed|Slabo+27px|Source+Sans+Pro:400i" rel="stylesheet">
+
 </head>
 
 <body>
@@ -199,22 +201,53 @@
             </div>
         </div>
     </div>
+    <div class="clearfix"></div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!--    Blog    -->
+    <div class="blog">
+        <div class="blog__title">
+        <br><br><h1 style="color: white; font-size: 30px; font-family: monospace; letter-spacing: 3px;">Blog</h1>
+        </div>
+        <div class="blog__container">
+            <div class="blog__date">
+                <br><br><h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">04</h1>
+                <h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">MAR</h1>
+                <h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">2018</h1>
+            </div>
+            <div class="blog__header">
+            <br><h3 style="color: black; font-size: 25px; font-family: sans-serif; letter-spacing: 1px;">Lorem ipsum dolor sit amet, consectetur adipiscing.</h3>
+            </div>
+            <div class="blog__image"></div>
+            <div class="blog__text">
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor.</p><br>
+                <p style="color: red">
+                    <b style="color: black">By</b> Bojan Spasovski
+                    <b style="color: black"> 123 comments</b> Share
+                    <i style="color: gainsboro" class="fa fa-facebook-square fa-lg"></i>
+                    <i style="color: gainsboro" class="fa fa-twitter-square fa-lg"></i>
+            </div>
+        </div>
+        <div class="blog__container">
+            <div class="blog__date">
+                <br><br><h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">04</h1>
+                <h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">MAR</h1>
+                <h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">2018</h1>
+            </div>
+            <div class="blog__header">
+            <br><h3 style="color: black; font-size: 25px; font-family: sans-serif; letter-spacing: 1px;">Lorem ipsum dolor sit amet, consectetur adipiscing.</h3>
+            </div>
+            <div class="blog__image"></div>
+            <div class="blog__text">
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor.</p><br>
+                <p style="color: red">
+                    <b style="color: black">By</b> Bojan Spasovski
+                    <b style="color: black"> 123 comments</b> Share
+                    <i style="color: gainsboro" class="fa fa-facebook-square fa-lg"></i>
+                    <i style="color: gainsboro" class="fa fa-twitter-square fa-lg"></i>
+            </div>
+        </div>
+    </div>
+    <div class="clearfix"></div>
 
 </body>
 
