uste footerot i moze da se kaze deka e gotovo

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,7 @@
     <link href="../sass/carousel.css" rel="stylesheet" />
 
     <link href="https://fonts.googleapis.com/css?family=Karma|Krona+One|Lato|Mina|Montserrat|Open+Sans|Oswald|Roboto|Roboto+Condensed|Saira+Condensed|Slabo+27px|Source+Sans+Pro:400i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 
 </head>
 
@@ -248,6 +249,48 @@
         </div>
     </div>
     <div class="clearfix"></div>
+
+    <div class="contact">
+        <div class="contact__title">
+            <br><h1>Testimonials</h1>
+        </div>
+        <div class="contact__containerLeft">
+            <div class="contact__containerLeftText">
+                <div class="contact__text1">
+                    <br><h1 style="font-family: 'Anton', sans-serif;">Great product, very fast service</h1><br>
+                    <p style="font-size: 18px; opacity: 0.9; font-style: italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada.</p>
+                </div>
+            </div>
+            <div class="contact__containerLeftImg">
+                <div class="contact__image"></div>
+                <br><br><br><br>
+                <h1 style="color: red; font-family: sans-serif;">Bojan Spasovski</h1>
+                <br><h1 style="color: red; font-family: sans-serif; font-style: italic">Macedonia</h1>
+            </div>
+            <div class="contact__containerLeftText">
+                <div class="contact__text1">
+                    <br><h1 style="font-family: 'Anton', sans-serif;">Great product, very fast service</h1><br>
+                    <p style="font-size: 18px; opacity: 0.9; font-style: italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada.</p>
+                </div>
+            </div>
+            <div class="contact__containerLeftImg">
+                <div class="contact__image"></div>
+                <br><br><br><br>
+                <h1 style="color: red; font-family: sans-serif;">Bojan Spasovski</h1>
+                <br><h1 style="color: red; font-family: sans-serif; font-style: italic">Macedonia</h1>
+            </div>
+        </div>
+        <div class="contact__containerRight">
+            <div class="contact__contactRight">
+                <br><br><h1 style="color: white; font-size: 30px; font-family: 'Anton', sans-serif;">Contact</h1>
+                <div class="contact__box"></div>
+                <div class="contact__box"></div>
+                <div class="contact__box"></div>
+                <div class="contact__bigBox"></div>
+                <button class="contactB">Send</button>
+            </div>
+        </div>
+    </div>
 
 </body>
 
